# wadar

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  soil_proposal.bib  soil_proposal.tex
00_documentation/: README.md  onboarding.md
01_dsp/: README.md
01_dsp/c_signal_processing/: Makefile  proc.c  wadar.h
01_dsp/dspml_pipeline/: README.md  requirements.txt  setup.py
01_dsp/matlab/: CalibrateRangeBin2VWC.mlx  CalibrateVWC2RAW.m  CaptureData.m  CaptureDataset.m  ChipotleRadarTester.m  DatasetCalibration.m  DatasetComputer.m  DatasetFramesProc.m  DatasetLabeler.m  DatasetManualFramesProc.m  DatasetManualResultLogger.m  DatasetManualResults.m  DatasetMonteCarlo.m  DatasetResultLogger.m  DatasetResults.m  DatasetTestHarness.m  Frames2CSV.m  Image2BulkDensity.m  NoveldaChipParams.m  NoveldaChipParams.prj  NoveldaDDC.m  PlotBox.m  PlotDualTag.m  PlotFrames.m  PlotTag.m  PreprocessRadargram.m  ProcessFFT.m  ProcessFrames.m  README.md  Radargram2Image.m  RunDualTagData.m  RunDualTagDataset.m  RunDualTagDataset2.m  RunTagData.m  RunTagDataEmbedded.m  RunTagDataEmbedded.prj  RunTagDataset.m  SenseTagVWC.m  SoilCompactionNotebook.m  SoilCompactionNotebook.mlx  (+42 more)
01_dsp/matlab/codegen/lib/run_tag_test_chipotle/: CMakeCache.txt  CMakeLists.txt  FFTImplementationCallback.c  FFTImplementationCallback.h  Makefile  NoveldaChipParams.c  NoveldaChipParams.h  NoveldaDDC.c  NoveldaDDC.h  abs.c  abs.h  buildInfo.mat  circshift.c  circshift.h  cmake_install.cmake  codeInfo.mat  codedescriptor.dmr  coderFread.c  coderFread.h  coder_platform.c  colon.c  colon.h  compileInfo.mat  conv.c  conv.h  cos.c  cos.h  eml_setop.c  eml_setop.h  fft.c  fft.h  fileManager.c  fileManager.h  findpeaks.c  findpeaks.h  fread.c  fread.h  fullfile.c  fullfile.h  hasIRIPrefix.c  (+54 more)
01_dsp/matlab/codegen/lib/run_tag_test_chipotle/examples/: main.c  main.h
01_dsp/matlab/codegen/lib/run_tag_test_chipotle/html/: report.mldatx
01_dsp/matlab/codegen/lib/run_tag_test_chipotle/interface/: _coder_run_tag_test_chipotle_api.c  _coder_run_tag_test_chipotle_api.h  _coder_run_tag_test_chipotle_info.c  _coder_run_tag_test_chipotle_info.h  _coder_run_tag_test_chipotle_mex.c  _coder_run_tag_test_chipotle_mex.h
01_dsp/python/: Image2Compaction.py  README.md  dataset.py  eos.py  hephaestus.py  hydros.py  image_processing.py  metis.py  model-old.py  model.py  model2.py  prometheus.py  test_new_feature_selection.py  train.py
02_uwb/: README.md
02_uwb/WIP_LiveFFT/: WIP_LiveFFT.h  WIP_LiveFFT_terminate.h  makefile  radarDemo.c  rt_nonfinite.h  rtwtypes.h  stage1.json
02_uwb/env/: Dockerfile  README.md  apt.conf  sources.list
02_uwb/shutdown/: README  rshutdown
03_backscatter_tag/: README.md
03_backscatter_tag/3D_prints/: README.md
04_data/: README.md
05_misc/: README.md
06_legacy/: README.md
06_legacy/MiniCircuits_Switch/: MiniCircuits_Switch.py
06_legacy/b1_ws/: README.md
Documentation/: README.md  WaDAR Journal.md  procTagTest.md
FlatEarth/c_code/: frameLogger.c  frameLogger.c.old  frameLoggerChipotle.c  makefile  stage1.json  stage2.json
MiniCircuits_Switch/: switchTest.py
RadarCaptures/: README.md
RadarCaptures/Captures/: Captures.md
RadarCaptures/Documentation/: frameLogger.md  wadarTagTest.md
SDISerial/: SDISerial.cpp  SDISerial.h  SDISerial.ino
b1/: README.md
b1/chipotle-radar/: CMakeLists.txt  package.xml  tagFT.csv
b1_ws/: README.md
b1_ws/src/: README.md
b1_ws/src/chipotle-radar/: CMakeLists.txt
b1_ws/src/nav_farm_sim/: README.md  package.xml
b1_ws/src/nav_farm_sim/config/: gps_wpf.mvc  nav2_no_map_params.yaml
b1_ws/src/nav_farm_sim/launch/: mapviz.launch.py
b1_ws/src/nav_farm_sim/map/: filter_mask_demo.yaml  map_demo.yaml
b1_ws/src/nav_farm_sim/nav_farm_sim/: interactive_waypoint_follower.py
c_code/: README  frameLogger.c  frameLoggerCayenne.c  frameViewer.c  makefile  temp_test.c
dsp/c_signal_processing/: salsa.c  utils.c  utils.h
dsp/matlab/: ChipotleRadarTester.m  NoveldaDDC.m  procCaptureCWT.m  procCaptureCorrelation.m  salsaMain.m  salsaTest.m  terraTest.m  wadarAirCapture.m
energyDetector/DutyCycleADC/: DutyCycleADC.ino
graphs/: VWC.gnuplot  snr.gnuplot
legacy/b1_ws/: frames_2025-01-03_10.53.36.gv  frames_2025-01-03_11.10.16.gv  frames_2025-01-03_11.15.31.gv  frames_2025-01-03_11.32.20.gv  frames_2025-01-03_11.58.13.gv  frames_2025-01-03_14.09.15.gv  frames_2025-01-03_14.36.30.gv  frames_2025-01-03_15.48.21.gv  frames_2025-01-03_15.53.24.gv
legacy/energyDetector/: SerialReader.py
matlab/: NoveldaDDC.m  README.md  X2M200_plot_frame.m  analyzePeaks.ipynb  analyzePeaks.m  analyzePeaks.py  calculateSNR.m  calculateSoilMoisture.m  calculateTagFrequencies.m  channel.m  chipotleFreqMag.mat  colleen.mat  colleenLinux.mat  colleenOSX.mat  csvPlot.m  datassh-keygen  demo.m  demoDualTag.m  depthSimulation.m  determinePeak.m  disp_x4_settings.m  link_budget.m  multComRadarPhase.m  postProcess.m  postProcessLOS.m  postProcessNLOS.m  postProcessUnderground.m  procCaptureCWT.m  procCaptureCorrelation.m  procRadarFrames.asv  procRadarFrames.m  procSoilMoisture.asv  procSoilMoisture.m  procTagTest.m  procTwoTag.m  radarSim.m  s41saturatedFarm30cm.csv  salsaLoad.m  salsaMain.m  salsaPeaks.m  (+24 more)
matlab/AnchoData/: switchon_10s_openair_2.mat
matlab/Cilantro Example 1/: CilantroExample_2AntennaPair.m
matlab/Example3/: test.m
matlab/Onza_Example1/: normalizeX4.m
matlab/SalsaLab/: Bradtest.m  Contents.m  salsaData.m  salsaLoad.m  salsaMain.m  salsaPlot.m  saveData_Ancho.m  saveData_Ancho_DAC_Sweep.m  saveData_Cayenne.m  soil_moisture.m
matlab/data/: loopbackAncho1  loopbackAncho1.md5  loopbackChipotle1  loopbackChipotle1.md5  loopbackChipotle21  loopbackChipotle21.md5
matlab/html/: radarWrapper.html
matlab/legacy/: X4M200_X4M300_IQbaseband_record_data.m  XEP_X4_configure_radar.m  multComRadar backup_30july2018.m  salsaData.m  testRadarConfig.m
matlab/misc/: test.m  (+1 more)
signal_processing/: Makefile  README.md  plotRadarCapture.py  proc.c  proc.h  salsa.c  salsa.h  utils.c  utils.h  wadar  wadar.c  wadar.h
soilProposal/: soil_proposal.tex
(+1580 files in other folders)
